# loop

./: #test.loop#  .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  Jenkinsfile  LICENSE  README.md  Testing.Dockerfile  build.rs  output.txt  test.loop
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml  test.yml
docs/adr/: README.md  adr-template.md  variable-and-constant-declaration-syntax.md
examples/: 3-5.loop  README.md  docker_creation.loop  palindrome.loop  sort.loop  timer.loop
jenkins/: Jenkinsfile.Prerelease  prerelease.py
scripts/: lint.py  prerelease.py
src/: lib.rs  main.rs
src/compiler/: definition.rs  instructions.rs  mod.rs  modifiers.rs  opcode.rs  symbol_table.rs  tests.rs  variable.rs  variable_table.rs
src/sanzio/: Cargo.toml  README.md
src/sanzio/src/: exception.rs  lib.rs
src/vinci/: Cargo.toml
src/vinci/src/: dummy.rs  lib.rs
src/vinci/src/ast/: mod.rs
src/vinci/src/ast/instructions/: conditional.rs  function.rs  memory.rs  mod.rs  suffix.rs  while_loop.rs
src/vinci/src/lexer/: mod.rs  tests.rs
src/vinci/src/lexer/token/: mod.rs
src/vinci/src/parser/: error.rs  mod.rs  tests.rs
src/vinci/src/parser/instruction/: conditional.rs  function.rs  memory.rs  mod.rs  suffix.rs  while_loop.rs
src/vinci/src/types/: mod.rs
std/: README.md  std.rs
tests/: README.md  end2end_test.py  integration_test.py  package.loop  test_array_3d_assign_index.loop  test_array_extension_method.loop  test_array_index.loop  test_array_length.loop  test_array_remove.loop  test_array_slice.loop  test_arrays.loop  test_classes.loop  test_classes_lazy.loop  test_closure.loop  test_closure_variable_scope.loop  test_comments.loop  test_conditional_false.loop  test_conditional_null.loop  test_conditional_true.loop  test_constant.loop  test_division_float.loop  test_division_integer.loop  test_everything_is_an_expression.loop  test_expression.loop  test_expression_precedence.loop  test_expression_statements.loop  test_extend_types.loop  test_extension_methods_variable.loop  test_fibonacci.loop  test_function.loop  test_function_types.loop  test_hashmaps.loop  test_hashmaps_nested_assign.loop  test_if_expression_return.loop  test_import_export.loop  test_import_lib.loop  test_logical_operators.loop  test_loop_iterator.loop  test_loop_iterator_array.loop  test_loop_while.loop  (+9 more)
(+204 files in other folders)
