[package]
name = "loop"
version = "0.1.0"
edition = "2021"

[dependencies]
strum_macros = "0.21.1"
strum = "0.21.0"
byteorder = "1.4.3"
rustyline = "9.0.0"
colored = "2"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
chrono = "0.4.19"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
once_cell = "1.8.0"
funny_string = "0.1.0"


[profile.release]
debug = true
