[package]
name = "picasso"
version = "0.2.0"
edition = "2021"
rust-version = "1.58.1"

[dependencies]
strum_macros = "0.21.1"
strum = "0.21.0"
rustyline = "9.0.0"
colored = "2"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "4.0.0"
chrono = "0.4.19"
once_cell = "1.8.0"

[lib]
name = "picasso"
path = "src/lib.rs"

[profile.release]
debug = true
