[package]
name = "loop"
version = "0.2.0"
edition = "2021"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vinci = { path = "./src/vinci", version = "0.2.0" }
picasso = { path = "./src/picasso", version = "0.2.0" }
sanzio = { path = "./src/sanzio", features = ["mlua", "libloading"], version = "0.1.0" }
rustyline = "9.1.0"
colored = "2.0.0"
once_cell = "1.10.0"
miniserde = "0.1"
dirs = "4.0.0"