[package]
name = "sanzio"
version = "0.1.0"
edition = "2021"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vinci = { path = "../vinci", version = "0.2.0" }
mlua = { version = "0.8.0-beta.4", features = ["luajit", "vendored"], optional = true }
libloading = { version = "0.5", optional = true }
colored = "2"

[lib]
name = "sanzio"
path = "src/lib.rs"
