[package]
name = "vinci"
version = "0.2.0"
edition = "2021"
license = "MIT"
rust-version = "1.60.0"
description = "Arc parser library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
logos = "0.12.0"

[lib]
name = "vinci"
path = "src/lib.rs"